--- a/TradeJournal/Views/Shared/_SideBar.cshtml
+++ b/TradeJournal/Views/Shared/_SideBar.cshtml
@@ -1,7 +1,4 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
+﻿@{
     List<Object> menuItems = new List<Object>();
     menuItems.Add(new
     {
@@ -74,7 +71,7 @@
             <img class="profile-pic" src="~/profile.jpg" />
             <div class="titles d-flex flex-column ps-3">
                 <h6 class="mb-0">Journal App</h6>
-                <span class="text-muted">YOUR NAME</span>
+                <span class="text-muted">LOGIN HERE</span>
             </div>
         </div>
 
