--- a/TradeJournal/Views/Trades/Details.cshtml
+++ b/TradeJournal/Views/Trades/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model TradeJournal.ViewModels.TradesJournalsViewModels
+﻿@model TradeJournal.ViewModels.TradesJournalsPlaybooksVM
 
 @{
     ViewData["Title"] = "Details";
@@ -11,9 +11,15 @@
 <div class="row mt-2" style="height: 100vh;">
     <div class="col-md-6 mt-2" style="overflow-y: auto;">
        <!-- TU BEDZIE CHECK LISTA - PLAYBOOK-->
-        <ejs-listview id="listview" dataSource="@ViewBag.ListData" showCheckBox="true" checkBoxPosition="Right">
-            <e-listview-fieldsettings text="text" id="id"></e-listview-fieldsettings>
-        </ejs-listview>
+        @if (Model.Playbook != null)
+        {
+            System.Diagnostics.Debug.WriteLine("Playbook is not null, rendering partial view.");
+            await Html.RenderPartialAsync("~/Views/Playbooks/AddOrEditPlaybook.cshtml", this.Model.Playbook);
+        }
+        else
+        {
+            <p>No Playbook data available.</p>
+        }
     </div>
     <!-- Druga kolumna - Journal -->
     <div class="col-md-6 h-100">
