Checkbox sie wyswietla - ale to tylko makieta

--- a/TradeJournal/Views/Playbooks/Index.cshtml
+++ b/TradeJournal/Views/Playbooks/Index.cshtml
@@ -2,9 +2,9 @@
 
 <hr />
 <div>
-    <form asp-controller="Playbooks" asp-action="AddOrEdit"> 
+    <form asp-controller="Playbooks" asp-action="Index"> 
         <div asp-validation-summary="ModelOnly"  class="text-danger"></div>
-        <input type="hidden" asp-for="Id" value="@(Model.Id == 0 ? "0" : Model.Id)" />
+        <input type="hidden" asp-for="Id" />
         <input type="hidden" asp-for="@Model.TradeId"/>
                 <ejs-listview id="listview" dataSource="@ViewBag.ListData" showCheckBox="true" checkBoxPosition="Right">
                     <e-listview-fieldsettings text="text" id="id"></e-listview-fieldsettings>
