--- a/TradeJournal/Views/Journals/AddOrEdit.cshtml
+++ b/TradeJournal/Views/Journals/AddOrEdit.cshtml
@@ -12,17 +12,17 @@
     };
 }
 
-<div class="row d-flex justify-content-center align-items-center">
-    <div class="col-md-7 w-100 h-100">
-        <form asp-controller="Journals" asp-action="AddOrEdit"> <!--tu jest blad, przekeirowywuje zle, bo zamiast do journals to do trades-->
+<div class="row d-flex justify-content-center align-items-center h-100">
+    <div class="col-md-7 h-100 vw-100 ">
+        <form  asp-controller="Journals" asp-action="AddOrEdit"> 
             <div asp-validation-summary="ModelOnly"  class="text-danger"></div>
             <input type="hidden" asp-for="Id" value="@(Model.Id == 0 ? "0" : Model.Id)" />
             <input type="hidden" asp-for="@Model.TradeId"/>
 
              <div class="mb-3">
                 <ejs-richtexteditor class="text-white" value="@Model.Text" id="Text" >
-                    <e-richtexteditor-toolbarsettings  items="tools"></e-richtexteditor-toolbarsettings>
-                        
+                    <e-richtexteditor-toolbarsettings items="tools"></e-richtexteditor-toolbarsettings>
+                    <e-richtexteditor-insertimagesettings saveUrl="/Journals/UploadImage" path="./uploads/"></e-richtexteditor-insertimagesettings>
                 </ejs-richtexteditor>
                 <span asp-validation-for="@Model.Text" class="text-danger"></span>
              </div>
@@ -36,4 +36,13 @@
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    <script>
+        var editor = document.getElementById("TextEditor").ej2_instances[0];
+        // Konfiguracja przesyłania obrazu
+        editor.insertImageSettings = {
+            saveFormat: 'Base64',  // Możesz użyć Base64 do przesyłania, ale najlepiej użyć `URL` dla przesyłania obrazów na serwer.
+            saveUrl: '/Journals/UploadImage',  // URL do akcji kontrolera obsługującej przesyłanie obrazu
+            removeUrl: '/Journals/RemoveImage' // URL do akcji kontrolera usuwającej obraz
+        };
+    </script>
 }
