--- a/TradeJournal/Views/Trades/Details.cshtml
+++ b/TradeJournal/Views/Trades/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model TradeJournal.ViewModels.TradesJournalsPlaybooksVM
+﻿@model TradeJournal.ViewModels.TradesJournalsVM
 
 @{
     ViewData["Title"] = "Details";
@@ -8,26 +8,15 @@
 <p>Open - close: @Html.DisplayFor(model => model.Trade.TransactionOpenDate) - @Html.DisplayFor(model => model.Trade.TransactionCloseDate)</p>
 <p>Outcome: @Html.DisplayFor(model => model.Trade.TradeOutcome)$</p>
 <hr />
-<div class="row mt-2" style="height: 100vh;">
-    <div class="col-md-6 mt-2" style="overflow-y: auto;">
-       <!-- TU BEDZIE CHECK LISTA - PLAYBOOK-->
-       @{await Html.RenderPartialAsync("~/Views/Playbooks/Index.cshtml", this.Model.Playbook);}
-
-    </div>
-    <!-- Druga kolumna - Journal -->
-    <div class="col-md-6 h-100">
-        <div class="h-100 w-100">
-            @if (Model.Journal != null)
-            {
-                System.Diagnostics.Debug.WriteLine("Journal is not null, rendering partial view.");
-                await Html.RenderPartialAsync("~/Views/Journals/AddOrEdit.cshtml", this.Model.Journal);
-            }
-            else
-            {
-                <p>No journal data available.</p>
-            }
-
-        </div>
-    </div>
+<div class="mt-2 h-100">
+    @if (Model.Journal != null)
+    {
+        System.Diagnostics.Debug.WriteLine("Journal is not null, rendering partial view.");
+        await Html.RenderPartialAsync("~/Views/Journals/AddOrEdit.cshtml", this.Model.Journal);
+    }
+    else
+    {
+        <p>No journal data available.</p>
+    }
 </div>
 
