--- a/TradeJournal/wwwroot/css/site.css
+++ b/TradeJournal/wwwroot/css/site.css
@@ -1,5 +1,6 @@
 html {
     font-size: 14px;
+    min-height: 100%;
 }
 
 @media (min-width: 768px) {
@@ -23,6 +24,7 @@ body {
     background-color: #12161d;
     color: #fff;
     overflow: hidden;
+    min-height: 100%;
 }
 
 .e-bigger {
