--- a/TradeJournal/Views/Journals/AddOrEdit.cshtml
+++ b/TradeJournal/Views/Journals/AddOrEdit.cshtml
@@ -7,7 +7,7 @@
         "LowerCase", "UpperCase", "|",
         "Formats", "Alignments", "OrderedList", "UnorderedList",
         "Outdent", "Indent", "|",
-        "CreateLink", "Image", "CreateTable", "|", "ClearFormat", "Print",
+        "CreateLink", "Image","FileManager" ,"CreateTable", "|", "ClearFormat", "Print",
         "SourceCode", "FullScreen", "|", "Undo", "Redo"
     };
 }
@@ -22,7 +22,7 @@
              <div class="mb-3">
                 <ejs-richtexteditor class="text-white" value="@Model.Text" id="Text" >
                     <e-richtexteditor-toolbarsettings items="tools"></e-richtexteditor-toolbarsettings>
-                    <e-richtexteditor-insertimagesettings saveUrl="/Journals/UploadImage" path="./uploads/"></e-richtexteditor-insertimagesettings>
+                    <e-richtexteditor-insertimagesettings saveUrl="UploadImage"></e-richtexteditor-insertimagesettings>
                 </ejs-richtexteditor>
                 <span asp-validation-for="@Model.Text" class="text-danger"></span>
              </div>
@@ -36,13 +36,5 @@
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-    <script>
-        var editor = document.getElementById("TextEditor").ej2_instances[0];
-        // Konfiguracja przesyłania obrazu
-        editor.insertImageSettings = {
-            saveFormat: 'Base64',  // Możesz użyć Base64 do przesyłania, ale najlepiej użyć `URL` dla przesyłania obrazów na serwer.
-            saveUrl: '/Journals/UploadImage',  // URL do akcji kontrolera obsługującej przesyłanie obrazu
-            removeUrl: '/Journals/RemoveImage' // URL do akcji kontrolera usuwającej obraz
-        };
-    </script>
+
 }
