--- a/TradeJournal/Views/Journals/AddOrEdit.cshtml
+++ b/TradeJournal/Views/Journals/AddOrEdit.cshtml
@@ -20,11 +20,10 @@
             <input type="hidden" asp-for="@Model.TradeId"/>
 
              <div class="mb-3">
-                <ejs-richtexteditor class="text-white" value="@Model.Text + @Model.ByteStream" id="Text" >
+                <ejs-richtexteditor class="text-white" value="@Model.Text" id="Text" >
                     <e-richtexteditor-toolbarsettings items="tools"></e-richtexteditor-toolbarsettings>
                     <e-richtexteditor-insertimagesettings saveUrl="/Journals/SaveImage?Id=@Model.Id" path="/wwwroot/uploads"></e-richtexteditor-insertimagesettings>
                 </ejs-richtexteditor>
-                <span asp-validation-for="@Model.Text" class="text-danger"></span>
              </div>
 
             <div class="mb-3">
