--- a/TradeJournal/Views/Journals/AddOrEdit.cshtml
+++ b/TradeJournal/Views/Journals/AddOrEdit.cshtml
@@ -12,8 +12,8 @@
     };
 }
 
-<div class="row d-flex justify-content-center align-items-center h-100">
-    <div class="col-md-7 h-100 vw-100 ">
+<div class="row d-flex justify-content-center align-items-center">
+    <div class="col-md-7 w-100 h-100">
         <form  asp-controller="Journals" asp-action="AddOrEdit"> 
             <div asp-validation-summary="ModelOnly"  class="text-danger"></div>
             <input type="hidden" asp-for="Id" value="@(Model.Id == 0 ? "0" : Model.Id)" />
@@ -22,7 +22,7 @@
              <div class="mb-3">
                 <ejs-richtexteditor class="text-white" value="@Model.Text" id="Text" >
                     <e-richtexteditor-toolbarsettings items="tools"></e-richtexteditor-toolbarsettings>
-                    <e-richtexteditor-insertimagesettings saveUrl="/Journals/SaveImage?Id=@Model.Id" path="/wwwroot/uploads"></e-richtexteditor-insertimagesettings>
+                    <e-richtexteditor-insertimagesettings saveUrl="Images/AddImage"></e-richtexteditor-insertimagesettings>
                 </ejs-richtexteditor>
              </div>
 
@@ -31,9 +31,11 @@
             </div>
         </form>
     </div>
+    </div>
 </div>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 
 }
+
