--- a/TradeJournal/Views/Images/AddImage.cshtml
+++ b/TradeJournal/Views/Images/AddImage.cshtml
@@ -12,19 +12,19 @@
     <div class="col-md-4">
         <form asp-action="AddImage" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-           
             <div class="form-group">
                 <label asp-for="Title" class="control-label"></label>
-                <input asp-for="Title" class="form-control" />
+                <input asp-for="Title"/>
                 <span asp-validation-for="Title" class="text-danger"></span>
             </div>
+
             <div class="form-group">
                 <label asp-for="ImageFile" class="control-label"></label>
                 <input asp-for="ImageFile" accept="image/*" />
                 <span asp-validation-for="ImageFile" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Add image" class="btn btn-primary" />
             </div>
         </form>
     </div>
