Dziala wyswietlanie jednego obrazka

--- a/TradeJournal/Views/Journals/AddOrEdit.cshtml
+++ b/TradeJournal/Views/Journals/AddOrEdit.cshtml
@@ -26,10 +26,9 @@
              </div>
 
             <div class="mb-3">
-                <ejs-button cssClass="w-100" id="submit" type="submit" content="Add note"></ejs-button>
+                <ejs-button id="note_button" cssClass="w-100" type="submit" content="Add note"></ejs-button>
             </div>
         </form>
-    </div>
     </div>
 </div>
 
