--- a/TradeJournal/Views/Images/AddImage.cshtml
+++ b/TradeJournal/Views/Images/AddImage.cshtml
@@ -1,30 +1,22 @@
 ﻿@model TradeJournal.Models.Image
 
-@{
-    ViewData["Title"] = "Create";
-}
-
-<h1>Create</h1>
-
-<h4>Image</h4>
-<hr />
-<div class="row">
+<div class="row d-flex justify-content-center align-items-center">
     <div class="col-md-4">
-        <form asp-action="AddImage" enctype="multipart/form-data">
+        <form asp-controller="Images" asp-action="AddImage" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Title" class="control-label"></label>
-                <input asp-for="Title"/>
+            <input type="hidden" asp-for="TradeId"/>
+            
+            <div class="mb-3">
+                <ejs-textbox id="Title" name="Title" placeholder="Title" floatLabelType="Auto"></ejs-textbox>
                 <span asp-validation-for="Title" class="text-danger"></span>
             </div>
 
-            <div class="form-group">
-                <label asp-for="ImageFile" class="control-label"></label>
-                <input asp-for="ImageFile" accept="image/*" />
+            <div class="mb-3">
+                <ejs-uploader id="ImageFile" name="ImageFile" autoUpload="false"> </ejs-uploader>
                 <span asp-validation-for="ImageFile" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Add image" class="btn btn-primary" />
+            <div class="mb-3">
+                <ejs-button id="image_button" cssClass="w-100" type="submit" content="Add image"></ejs-button>
             </div>
         </form>
     </div>
@@ -35,3 +27,4 @@
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
+
