--- a/TradeJournal/Views/Images/Details.cshtml
+++ b/TradeJournal/Views/Images/Details.cshtml
@@ -4,18 +4,24 @@
     <hr />
     <div class="col-lg-12 control-section default-carousel-section">
         <div class="e-sample-resize-container carousel-sample">
-            <ejs-carousel id="defaultCarousel" cssClass="default-carousel">
+            <ejs-carousel id="defaultCarousel" autoPlay="false" cssClass="default-carousel">
                 <e-carousel-items>
                     <e-carousel-item template="#image"></e-carousel-item>
                 </e-carousel-items>
             </ejs-carousel>
         </div>
     </div>
+    <hr />
+    @if (Model != null)
+    {
+        System.Diagnostics.Debug.WriteLine("Journal is not null, rendering partial view.");
+        await Html.RenderPartialAsync("~/Views/Images/AddImage.cshtml", this.Model);
+    }
 </div>
 
 <script id="image" type="text/x-template">
     <figure class="img-container">
-        <img src="@ViewBag.ImagePath" alt="@ViewBag.ImageTitle" />
+        <img class="w-100 h-100" src="@ViewBag.ImageContent" asp-append-version="true" />
         <figcaption class="img-caption">@ViewBag.ImageTitle</figcaption>
     </figure>
 </script>
@@ -24,8 +30,8 @@
 <style>
     .default-carousel-section .carousel-sample {
         margin: 0 auto 2em;
-        max-width: 500px;
-        height: 300px;
+        width: 75%;
+        height: 75%;
     }
 
     .default-carousel .e-carousel-items .e-carousel-item .img-container {
