--- a/TradeJournal/Views/Shared/_SideBar.cshtml
+++ b/TradeJournal/Views/Shared/_SideBar.cshtml
@@ -61,14 +61,14 @@
 
         <div class="logo-wrapper">
             <div class="app-logo">
-                <img src="~/logo.png" />
+                <img src="~/uploads/logo.png" />
             </div>
             <div class="w-100"></div>
             <i id="sidebar-toggler" class="fa-solid"></i>
         </div>
 
         <div class="profile-wrapper">
-            <img class="profile-pic" src="~/profile.jpg" />
+            <img class="profile-pic" src="~/uploads/profile.jpg" />
             <div class="titles d-flex flex-column ps-3">
                 <h6 class="mb-0">Journal App</h6>
                 <span class="text-muted">LOGIN HERE</span>
