--- a/TradeJournal/Views/Images/Details.cshtml
+++ b/TradeJournal/Views/Images/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<TradeJournal.Models.Image>
+﻿@model IEnumerable<TradeJournal.Models.Image>
 
 <div>
     <hr />
@@ -6,28 +6,28 @@
         <div class="e-sample-resize-container carousel-sample">
             <ejs-carousel id="defaultCarousel" autoPlay="false" cssClass="default-carousel">
                 <e-carousel-items>
-                    @for (int i = 0; i < ViewBag.ImagesContent.Count; i++)
+                    @foreach (var image in Model)
                     {
-                        <e-carousel-item template="#image@i"></e-carousel-item>
+                        <e-carousel-item template="#image@(image.Id)"></e-carousel-item>
                     }
                 </e-carousel-items>
             </ejs-carousel>
         </div>
     </div>
     <hr />
-    @if (Model != null)
+    @if (Model.Any())
     {
-        System.Diagnostics.Debug.WriteLine("Journal is not null, rendering partial view.");
-        await Html.RenderPartialAsync("~/Views/Images/AddImage.cshtml", this.Model);
+        System.Diagnostics.Debug.WriteLine("Rendering image add partial view.");
+        await Html.RenderPartialAsync("~/Views/Images/AddImage.cshtml", Model.First());
     }
 </div>
 
-@for (int i = 0; i < ViewBag.ImagesContent.Count; i++)
+@foreach (var image in Model)
 {
-    <script id="image@(i)" type="text/x-template">
+    <script id="image@(image.Id)" type="text/x-template">
         <figure class="img-container">
-            <img class="w-100 h-100" src="@ViewBag.ImagesContent[i]" alt="@ViewBag.ImagesTitles[i]" />
-            <figcaption class="img-caption">@ViewBag.ImagesTitles[i]</figcaption>
+            <img class="w-100 h-100" src="data:image/png;base64,@image.FileContent" alt="@image.Title" />
+            <figcaption class="img-caption">@image.Title</figcaption>
         </figure>
     </script>
 }
