--- a/TradeJournal/Views/Journals/AddOrEdit.cshtml
+++ b/TradeJournal/Views/Journals/AddOrEdit.cshtml
@@ -7,7 +7,7 @@
         "LowerCase", "UpperCase", "|",
         "Formats", "Alignments", "OrderedList", "UnorderedList",
         "Outdent", "Indent", "|",
-        "CreateLink", "Image","FileManager" ,"CreateTable", "|", "ClearFormat", "Print",
+        "CreateLink" ,"CreateTable", "|", "ClearFormat", "Print",
         "SourceCode", "FullScreen", "|", "Undo", "Redo"
     };
 }
